Code to resolve horizontal scrolling on mobile devices- codeblock.css

--- a/themes/beautifulhugo/static/css/main.css
+++ b/themes/beautifulhugo/static/css/main.css
@@ -411,7 +411,7 @@ footer .theme-by {
 .blog-tags a:hover {
   border-radius: 2px;
   color: #008AFF;
-  background-color: #CCC;
+  background-color: #E6F2FA;
 }
 
 .post-preview .blog-tags {
